tests/integration/errors/array/sub-array.it
Accessing sub-array

- compilation error
=========
void main() {
    int b;
    int a[2][2];

    b = a[1];
    a[1] = b;
}
=========
<stdin>:5: error: extractor doesn't match extractable's number of dimensions
<stdin>:6: error: extractor doesn't match extractable's number of dimensions
